fix scrollbar on homepage from extending to page header

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -225,7 +225,7 @@ input[type='number'] {
 }
 .custom_scroll_ambient::-webkit-scrollbar,
 .content-container::-webkit-scrollbar {
-    width: 8px !important; /* Adjust the width as needed */
+    width: 12px !important; /* Adjust the width as needed */
 }
 .custom_scroll_ambient::-webkit-scrollbar-thumb,
 .content-container::-webkit-scrollbar-thumb {
@@ -241,13 +241,17 @@ input[type='number'] {
         ) !important;
     background-origin: border-box !important;
     background-clip: content-box, border-box !important; /* Clip the border to show gradient */
-    min-height: 50px !important; /* Set the minimum height for the scrollbar thumb */
+    min-height: 50px !important; /* Set the minimum height for the scrollbar thumb */;
+   
+    
+    
 }
 .custom_scroll_ambient::-webkit-scrollbar-track,
 .content-container::-webkit-scrollbar-track {
     background: #06060c !important; /* Background color of the scrollbar track */
     border-radius: 8px !important; /* Adjust the border radius as needed */
-    padding: 2px !important; /* Add padding to the track */
+    padding: 2px !important; /* Add padding to the track */;
+  
 }
 
 @media only screen and (max-width: 600px) {
